c4prj1_deck/grade.txt
Grading at Sun Sep  9 15:17:15 UTC 2018
Compiling deck.c -> deck.o
deck.c: In function ‘make_deck_exclude’:
deck.c:92:13: error: implicit declaration of function ‘add_card_to_deck’ [-Werror=implicit-function-declaration]
             add_card_to_deck(ret_d, temp_c);
             ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
